--- a/lesson14/scss/page/style.scss
+++ b/lesson14/scss/page/style.scss
@@ -407,6 +407,7 @@ nav ul a:hover {
 .mumbai-item img {
     width: 100%;
     border-radius: 20px;
+    object-fit: cover;
 }
 
 .mumbai-item p {
@@ -515,6 +516,7 @@ nav ul a:hover {
     width: 60%;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     padding: 20px;
+    border-radius: 10px;
 }
 
 .form-content {
@@ -561,4 +563,147 @@ nav ul a:hover {
     width: 50%;
     display: flex;
     justify-content: start;
+}
+
+//BLOG STYLE
+
+#blog {
+    width: 90%;
+    margin: 100px auto;
+}
+
+.blog-contents {
+    text-align: center;
+    width: 100%;
+}
+
+.blog-contents h2 {
+    color: #ffa500;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.blog-contents h3 {
+    font-size: 40px;
+}
+
+.blog-layout {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin-top: 30px;
+}
+
+.blog-layout-item img {
+    width: 100%;
+    object-fit: cover;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    transition-duration: 0.3s;
+}
+
+.img-blog {
+    width: 100%;
+    overflow: hidden;
+    height: 250px;
+}
+
+.blog-layout-item a {
+    text-decoration: none;
+    transition-duration: 0.5s;
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    width: 100%;
+    display: block;
+    height: 100%;
+    overflow: hidden;
+}
+
+.blog-layout-item img:hover {
+    transform: scale(1.1);
+}
+
+.blog-item-bottom {
+    text-align: left;
+    padding: 0 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 250px;
+}
+
+.blog-item-bottom h3 {
+    font-size: 20px;
+    font-weight: 500;
+    color: black;
+    transition-duration: 0.5s;
+}
+
+.blog-item-bottom h3:hover {
+    color: #ffa500;
+}
+
+.blog-item-bottom p {
+    color: #5d5d5d;
+    font-size: 0.9em;
+    line-height: 2;
+}
+
+.blog-item-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+ 
+// FOOTER BANNER  STYLE
+#footer-banner {
+    width: 100%;
+    background: linear-gradient(rgba(17,17,17,.7),rgba(17,17,17,.7)),url(https://stravelhtml.vercel.app/mumbai/images/banner-bg.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding: 3rem 2rem;
+    text-align: center;
+    background-attachment: fixed;
+}
+
+.footer-banner-content {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+}
+
+.footer-banner-content h2 {
+    font-size: 20px;
+    color: #ffa500;
+    font-weight: 500;
+}
+
+.footer-banner-content h3 {
+    font-size: 40px;
+    color: white;
+    font-weight: bold;
+}
+
+.footer-banner-content p {
+    color: white;
+    font-size: 0.9em;
+    line-height: 2;
+}
+
+.footer-banner-content a {
+    padding: 10px;
+    font-size: 20px;
+    background-color: #ffa500;
+    color: white;
+    width: 150px;
+    text-decoration: none;
+    border-radius: 20px;
+    border: 1px solid #ffa500;
+    transition-duration: 0.5s;
+}
+
+.footer-banner-content a:hover {
+    background-color: rgba(255,165,0,.2);
+    color: #ffa500;
 }
